[gd_scene load_steps=6 format=3 uid="uid://d1jujxfamsekk"]

[ext_resource type="Script" path="res://addons/pronto/signal_connecting/expression_edit.gd" id="1_lndi8"]

[sub_resource type="SystemFont" id="SystemFont_xd5ge"]
font_names = PackedStringArray("Monospace")

[sub_resource type="CodeHighlighter" id="CodeHighlighter_p388k"]
number_color = Color(0, 0.886275, 0.352941, 1)
symbol_color = Color(0.921569, 1, 0.913725, 1)
function_color = Color(0.964706, 0.458824, 0.878431, 1)
member_variable_color = Color(0.054902, 0.32549, 1, 1)
keyword_colors = {
"false": Color(0.984314, 0, 0.490196, 1),
"for": Color(0.984314, 0, 0.490196, 1),
"from": Color(0.92549, 0.427451, 0, 1),
"in": Color(0.984314, 0, 0.490196, 1),
"to": Color(0.92549, 0.427451, 0, 1),
"true": Color(0.984314, 0, 0.490196, 1)
}
color_regions = {
"\" \"": Color(0, 0.886275, 0.352941, 1)
}

[sub_resource type="Image" id="Image_sdi0a"]
data = {
"data": PackedByteArray(255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 206, 59, 59, 26, 206, 59, 59, 78, 205, 57, 57, 116, 206, 59, 59, 78, 206, 59, 59, 26, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 216, 59, 59, 13, 205, 56, 56, 153, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 57, 57, 151, 213, 64, 64, 12, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 216, 59, 59, 13, 205, 56, 56, 217, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 57, 57, 215, 213, 64, 64, 12, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 205, 56, 56, 153, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 206, 56, 56, 150, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 206, 59, 59, 26, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 215, 61, 61, 25, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 206, 59, 59, 78, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 57, 57, 76, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 205, 57, 57, 116, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 207, 57, 57, 115, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 206, 59, 59, 78, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 57, 57, 76, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 206, 59, 59, 26, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 213, 64, 64, 24, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 205, 57, 57, 151, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 57, 57, 148, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 213, 64, 64, 12, 205, 57, 57, 215, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 214, 209, 69, 69, 11, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 213, 64, 64, 12, 206, 56, 56, 150, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 56, 56, 255, 205, 57, 57, 148, 209, 69, 69, 11, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 215, 61, 61, 25, 205, 57, 57, 76, 207, 57, 57, 115, 205, 57, 57, 76, 213, 64, 64, 24, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0, 255, 255, 255, 0),
"format": "RGBA8",
"height": 17,
"mipmaps": false,
"width": 17
}

[sub_resource type="ImageTexture" id="ImageTexture_rkuuk"]
image = SubResource("Image_sdi0a")

[node name="expression_edit" type="HBoxContainer"]
custom_minimum_size = Vector2(140, 32)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("1_lndi8")
placeholder_text = "Expression..."

[node name="Expression" type="CodeEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_xd5ge")
placeholder_text = "Expression..."
draw_tabs = true
syntax_highlighter = SubResource("CodeHighlighter_p388k")
scroll_fit_content_height = true
indent_automatic = true
auto_brace_completion_enabled = true

[node name="OpenFile" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "Open file for placing breakpoints (cannot edit)"
icon = SubResource("ImageTexture_rkuuk")
flat = true

[connection signal="text_changed" from="Expression" to="." method="_on_expression_text_changed"]
[connection signal="pressed" from="OpenFile" to="." method="open_file"]
